--- a/style.css
+++ b/style.css
@@ -1,4 +1,82 @@
-  .ferst{  width: 80%;
-    margin: 20px auto 40px auto;
-    background-color: #7be6ed;
-    color: #333;}
+body{
+    font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+* {
+    box-sizing: border-box;
+  }
+  .hhh{position: fixed;
+    top: 1px;
+    right: 1675px;
+    background-color: #b2b2b2;
+    border: 2px solid #000;}
+
+  .header{border: 1px solid red;}
+  .main{border: 1px solid red;}
+  .footer{border: 1px solid red;}
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    list-style: none;
+    padding: 0 20px;
+  line-height: 50px;
+  }
+  html {
+    scroll-behavior: smooth; 
+  }
+  .section-item a {
+    color: #829985;
+    text-decoration: none;  
+    transition: color 0.5s;
+  }
+  .section-item a:hover {
+    color: #4d2323;
+  }
+  .nav-link:hover{
+    transition: .3s;
+  }
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .section {
+    width: 50%;
+  }
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+  body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
+  }
+  .section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
+  }
+  .link {
+    text-decoration: none;
+    color: #829985;
+    transition: color 0.5s;
+  }
+  
+  .link:hover {
+    color: #5d7260;
+  }
